# lite-xl-tokenizer

./: README.md  changelog.md  manifest.json  meson.build  meson_options.txt
.github/workflows/: release.yml
plugins/: ctokenizer.lua
src/: tokenizer.c
